--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<string name="red">Red alert!</string>
+	<string name="start_batch">Start Training</string>
+	<string name="help">Instructions</string>
+	<string name="settings">Settings</string>
+	<string name="stats">Statistics</string>
 	<string name="app_name">Mnemonix</string>
 </resources>
